--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <header>
-
+    <header id="header">
+        <div id="header-search">
+            <input type="Search" placeholder="Search">
+            <img id="header-search-icon" src="assets/magnify.svg">
+        </div>
+        <a href="">
+            <img id="header-notification" src="assets/bell-outline.svg" alt="Cat looking directly at camera">
+        </a>
+        <a id="header-profile-link" href="">
+            <img id="header-profile-picture" src="assets/cat_profile.jpg" alt="">
+        </a>
+        <a href="">
+            <span id="header-username">Admeownistrator</span>
+        </a>
     </header>
     <nav>
         <header id="sidebar-header">
