Add support easter egg

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="">Privacy</a>
 
             <img class="sidebar-icon" src="assets/support.svg" alt="">
-            <a href="">Support</a>
+            <a href="https://www.youtube.com/watch?v=Xfs03Va5pAY">Support</a>
         </div>
     </nav>
     <main>
