Create announcements card

--- a/index.html
+++ b/index.html
@@ -55,8 +55,28 @@
             <a href="https://www.youtube.com/watch?v=Xfs03Va5pAY">Support</a>
         </div>
     </nav>
-    <main>
-
+    <main id="main">
+        <div class="main-card main-grid-right">
+            <h2>Announcements</h2>
+            <div class="main-card-content">
+                <ol class="announcements">
+                    <li class="announcement">
+                        <h3>Server Maintenance</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quasi repudiandae libero omnis dolorem illum cumque quidem impedit hic pariatur!</p>
+                    </li>
+                    <div class="horizontal-line"></div>
+                    <li class="announcement">
+                        <h3>Community Share Day</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, velit?</p>
+                    </li>
+                    <div class="horizontal-line"></div>
+                    <li class="announcement">
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ipsum dolor harum eum sint officia!</p>
+                    </li>
+                </ol>
+            </div>
+        </div>
     </main>
 </body>
 </html>
