Create recent messages card

--- a/index.html
+++ b/index.html
@@ -77,6 +77,41 @@
                 </ol>
             </div>
         </div>
+        <div class="main-card main-grid-right">
+            <h2>Recent Messages</h2>
+            <div class="main-card-content">
+                <ol class="recent-messages">
+                    <li class="recent-chat">
+                        <img class="online" src="assets/cat_profile.jpg">
+                        <div class="recent-chat-details">
+                            <h3>BarackObama</h2>
+                            <p>This is a matter of great national security</p>
+                        </div>
+                    </li>
+                    <li class="recent-chat">
+                        <img class="online" src="assets/cat_profile.jpg">
+                        <div class="recent-chat-details">
+                            <h3>elonmusk</h2>
+                            <p>Where are my cats????</p>
+                        </div>
+                    </li>
+                    <li class="recent-chat">
+                        <img src="assets/cat_profile.jpg">
+                        <div class="recent-chat-details">
+                            <h3>katyperry</h2>
+                            <p>I ordered a black cat but I received a tabby cat</p>
+                        </div>
+                    </li>
+                    <li class="recent-chat">
+                        <img class="away" src="assets/cat_profile.jpg">
+                        <div class="recent-chat-details">
+                            <h3>justinbieber</h2>
+                            <p>Cats now.</p>
+                        </div>
+                    </li>
+                </ol>
+            </div>
+        </div>
     </main>
 </body>
 </html>
