Create kanban card

--- a/index.html
+++ b/index.html
@@ -112,6 +112,38 @@
                 </ol>
             </div>
         </div>
+        <div class="main-card">
+            <h2>Kanban</h2>
+            <div class="kanban main-card-content">
+                <div class="kanban-to-do">
+                    <h3 class="kanban-title">To Do</h3>
+                    <div class="kanban-task">
+                        <div class="kanban-task-title">Test Cat Envelopes</div>
+                        <p class="kanban-task-content">Lorem, ipsum dolor. Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="kanban-task">
+                        <div class="kanban-task-title">Respond to Messages</div>
+                    </div>
+                </div>
+                <div class="kanban-doing">
+                    <h3 class="kanban-title">Doing</h3>
+                    <div class="kanban-task">
+                        <div class="kanban-task-title">Source Cats</div>
+                        <p class="kanban-task-content">Lorem, ipsum dolor. </p>
+                    </div>
+                </div>
+                <div class="kanban-done">
+                    <h3 class="kanban-title kanban-title-done">Done</h3>
+                    <div class="kanban-task">
+                        <div class="kanban-task-title">Think of Awesome Business Idea</div>
+                    </div>
+                    <div class="kanban-task">
+                        <div class="kanban-task-title">Create Sign Up Page</div>
+                        <p class="kanban-task-content"><a href="https://www.davidcorcoran.ie/odin-sign-up/">Link</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
