Create stats card

--- a/index.html
+++ b/index.html
@@ -144,6 +144,25 @@
                 </div>
             </div>
         </div>
+        <div class="main-card">
+            <h2>Stats</h2>
+            <div class="stats main-card-content">
+                <h3>Cats Delivered</h3>
+                <div class="bar-chart">
+                    <div class="bar-chart-green" style="--w: 1%;"></div>
+                    <div class="bar-chart-grey" style="--w: 99%;"></div>
+                </div>
+                <h3>Complaints</h3>
+                <div class="bar-chart">
+                    <div class="bar-chart-red" style="--w: 60%;"></div>
+                    <div class="bar-chart-grey" style="--w: 40%;"></div>
+                </div>
+                <h3>Meow-o-meter</h3>
+                <div class="bar-chart" style="overflow: visible;">
+                    <div class="bar-chart-rainbow" style="--w: 100%;"></div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
