Add cat image profile pictures

--- a/index.html
+++ b/index.html
@@ -82,28 +82,28 @@
             <div class="main-card-content">
                 <ol class="recent-messages">
                     <li class="recent-chat">
-                        <img class="online" src="assets/cat_profile.jpg">
+                        <img class="online" src="assets/cat_profile2.jpg">
                         <div class="recent-chat-details">
                             <h3>BarackObama</h2>
                             <p>This is a matter of great national security</p>
                         </div>
                     </li>
                     <li class="recent-chat">
-                        <img class="online" src="assets/cat_profile.jpg">
+                        <img class="online" src="assets/cat_profile3.jpg">
                         <div class="recent-chat-details">
                             <h3>elonmusk</h2>
                             <p>Where are my cats????</p>
                         </div>
                     </li>
                     <li class="recent-chat">
-                        <img src="assets/cat_profile.jpg">
+                        <img src="assets/cat_profile1.jpg">
                         <div class="recent-chat-details">
                             <h3>katyperry</h2>
                             <p>I ordered a black cat but I received a tabby cat</p>
                         </div>
                     </li>
                     <li class="recent-chat">
-                        <img class="away" src="assets/cat_profile.jpg">
+                        <img class="away" src="assets/cat_profile4.jpg">
                         <div class="recent-chat-details">
                             <h3>justinbieber</h2>
                             <p>Cats now.</p>
